# blackbird

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  flake.nix  shell.nix
.github/workflows/: clippy.yml
blackbird/: Cargo.toml
blackbird-client-shared/: Cargo.toml
blackbird-client-shared/src/: alphabet_scroll.rs  config.rs  controls.rs  cover_art_cache.rs  lib.rs  library_scroll.rs  lyrics.rs  paths.rs  style.rs  thread_pool.rs  tray.rs
blackbird-core/: Cargo.toml
blackbird-core/src/: app_state.rs  config.rs  lib.rs  library.rs  logic.rs  playback_source.rs  playback_thread.rs  queue.rs  render.rs  tokio_thread.rs  util.rs
blackbird-core/src/state/: album.rs  group.rs  mod.rs
blackbird-id3mover/: Cargo.toml  README.md
blackbird-id3mover/src/: main.rs
blackbird-json-export/: Cargo.toml
blackbird-json-export-types/: Cargo.toml
blackbird-json-export-types/src/: lib.rs
blackbird-json-export/src/: main.rs
blackbird-shared/: Cargo.toml
blackbird-shared/src/: config.rs  lib.rs
blackbird-spotcheck/: Cargo.toml  README.md
blackbird-spotcheck/src/: common.rs  main.rs  spotify.rs
blackbird-state/: Cargo.toml
blackbird-state/src/: album.rs  artist.rs  cover_art.rs  group.rs  lib.rs  playback_mode.rs  song.rs  track.rs
blackbird-subsonic/: Cargo.toml
blackbird-subsonic/src/: album.rs  artist.rs  client.rs  lib.rs  lyrics.rs  misc.rs  request.rs  search.rs  song.rs
blackbird-tui/: Cargo.toml
blackbird-tui/src/: app.rs  config.rs  controls.rs  cover_art.rs  keys.rs  log_buffer.rs  main.rs
blackbird-tui/src/cover_art/: derived_cache.rs  mod.rs  pool.rs  quantize.rs
blackbird-tui/src/ui/: album_art_overlay.rs  layout.rs  library.rs  loading.rs  logs.rs  lyrics.rs  mod.rs  now_playing.rs  queue.rs  scroll.rs  search.rs  settings.rs
blackbird/assets/: blackbird-female-bird.txt  no-album-art.txt
blackbird/src/: album.rs  config.rs  controls.rs  cover_art_cache.rs  logic.rs  main.rs  media_controls.rs  song.rs  style.rs  tray.rs  util.rs  windows.rs
blackbird/src/state/: album.rs  mod.rs  song.rs
blackbird/src/ui/: album.rs  group.rs  keys.rs  lyrics.rs  mini_library.rs  mod.rs  playing_track.rs  queue.rs  scrub_bar.rs  search.rs  settings.rs  song.rs  style.rs  track.rs  util.rs
