[workspace]
members = [
    "blackbird",
    "blackbird-core",
    "blackbird-shared",
    "blackbird-spotcheck",
    "blackbird-subsonic",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[profile.dev.package.image]
opt-level = 3

[profile.release.package.image]
opt-level = 3
