[workspace]
members = [
    "blackbird",
    "blackbird-core",
    "blackbird-id3mover",
    "blackbird-shared",
    "blackbird-spotcheck", "blackbird-state",
    "blackbird-subsonic",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"

rand = "0.9.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

toml = "0.8.20"

tokio = { version = "1.43.1", features = ["full"] }

tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[profile.dev.package.image]
opt-level = 3

[profile.release.package.image]
opt-level = 3
