[workspace]
members = [
    "blackbird",
    "blackbird-client-shared",
    "blackbird-core",
    "blackbird-id3mover",
    "blackbird-json-export",
    "blackbird-json-export-types",
    "blackbird-shared",
    "blackbird-spotcheck",
    "blackbird-state",
    "blackbird-subsonic",
    "blackbird-tui",
]
resolver = "2"
default-members = ["blackbird"]

[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.40", features = ["derive"] }
crossterm = "0.29"
data-encoding = "2.8.0"
eframe = "0.32.0"
egui = "0.32.0"
egui-phosphor = { version = "0.10.0", features = ["regular", "fill"] }
egui_extras = { version = "0.32.0", features = ["image"] }
etcetera = "0.11"
futures = "0.3"
global-hotkey = "0.6"
gtk = "0.18"
icu_collator = "2.0.0"
image = { version = "0.25", default-features = false, features = [
    "jpeg",
    "png",
    "webp",
    "gif",
] }
lofty = "0.22.4"
md5 = "0.7.0"
rand = "0.9.0"
ratatui = "0.30"
raw-window-handle = "0.6"
reqwest = { version = "0.12.12", default-features = false, features = ["rustls-tls"] }
rodio = { git = "https://github.com/RustAudio/rodio.git" }
sanitize-filename = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smallvec = "1.15"
smol_str = { version = "0.3.5", features = ["serde"] }
souvlaki = "0.8.3"
tokio = { version = "1.43.1", features = ["full"] }
toml = "0.8.20"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tray-icon = "0.21.2"
unicode-width = "0.2"
walkdir = "2.5.0"
windows = { version = "0.62", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
] }

[profile.dev.package.image]
opt-level = 3

[profile.release.package.image]
opt-level = 3

[profile.profiling]
inherits = "release"
debug = true

[patch.crates-io]
cpal = { git = "https://github.com/philpax/cpal.git", branch = "audio-device-fix-updated" }
