[package]
name = "blackbird-client-shared"
version = "0.1.0"
edition = "2024"

[features]
media-controls = ["dep:souvlaki"]

[dependencies]
blackbird-core = { path = "../blackbird-core", default-features = false }
blackbird-shared = { path = "../blackbird-shared" }

image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "gif"] }
serde = { workspace = true }
tracing = { workspace = true }
souvlaki = { version = "0.8.3", optional = true }
