[package]
name = "blackbird-client-shared"
version = "0.1.0"
edition = "2024"

[features]
media-controls = ["dep:souvlaki"]
tray-icon = ["dep:tray-icon", "dep:gtk"]

[dependencies]
blackbird-core = { path = "../blackbird-core", default-features = false }
blackbird-shared = { path = "../blackbird-shared" }

etcetera = { workspace = true }
image = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
souvlaki = { workspace = true, optional = true }
tray-icon = { workspace = true, optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = { workspace = true, optional = true }
