[package]
name = "blackbird-core"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

blackbird-subsonic = { path = "../blackbird-subsonic" }
blackbird-state = { path = "../blackbird-state" }

rodio = { git = "https://github.com/RustAudio/rodio.git", rev = "47dab16f79f02fe1c327a89c814c3e3f8498647b" }
