[package]
name = "blackbird-core"
version = "0.1.0"
edition = "2024"

[features]
default = ["audio"]
audio = ["dep:rodio"]

[dependencies]
rand = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

blackbird-subsonic = { path = "../blackbird-subsonic" }
blackbird-state = { path = "../blackbird-state" }

icu_normalizer = { workspace = true }
icu_properties = { workspace = true }
rodio = { workspace = true, optional = true }
smallvec = { workspace = true }
smol_str = { workspace = true }
