[package]
name = "blackbird-spotcheck"
version = "0.1.0"
edition = "2024"

[dependencies]
blackbird-shared = { path = "../blackbird-shared" }
blackbird-subsonic = { path = "../blackbird-subsonic" }

chrono = { version = "0.4.41", features = ["serde"] }

anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
