[package]
name = "blackbird-subsonic"
version = "0.1.0"
edition = "2024"

[dependencies]
data-encoding = { workspace = true }
md5 = { workspace = true }
reqwest = { workspace = true }

rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[features]
default = ["opensubsonic"]
opensubsonic = []
