[package]
name = "blackbird-tui"
version = "0.1.0"
edition = "2024"

[features]
default = ["audio", "media-controls"]
audio = ["blackbird-core/audio"]
media-controls = ["blackbird-client-shared/media-controls"]

[dependencies]
blackbird-client-shared = { path = "../blackbird-client-shared" }
blackbird-core = { path = "../blackbird-core", default-features = false }
blackbird-shared = { path = "../blackbird-shared" }

anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
serde = { workspace = true }
toml = { workspace = true }

ratatui = "0.29"
crossterm = "0.28"
unicode-width = "0.2"
image = { version = "0.25", default-features = false, features = [
    "jpeg",
    "png",
    "webp",
    "gif",
] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = ["Win32_UI_WindowsAndMessaging", "Win32_System_LibraryLoader", "Win32_Graphics_Gdi"] }
