[package]
name = "blackbird-tui"
version = "0.1.0"
edition = "2024"

[features]
default = ["audio", "media-controls", "tray-icon"]
audio = ["blackbird-core/audio"]
media-controls = ["blackbird-client-shared/media-controls"]
tray-icon = ["blackbird-client-shared/tray-icon"]

[dependencies]
blackbird-client-shared = { path = "../blackbird-client-shared" }
blackbird-core = { path = "../blackbird-core", default-features = false }
blackbird-shared = { path = "../blackbird-shared" }

anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
serde = { workspace = true }
toml = { workspace = true }

ratatui = { workspace = true }
crossterm = { workspace = true }
smol_str = { workspace = true }
unicode-width = { workspace = true }
image = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true }
