[package]
name = "blackbird"
version = "0.1.0"
edition = "2021"

[dependencies]
blackbird-core = { path = "../blackbird-core" }
blackbird-shared = { path = "../blackbird-shared" }

anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
serde = { workspace = true }
toml = { workspace = true }

egui = "0.32.0"
eframe = "0.32.0"
egui_extras = { version = "0.32.0", features = ["image"] }
image = { version = "0.25", default-features = false, features = [
    "jpeg",
    "png",
] }
egui-phosphor = "0.10.0"
souvlaki = "0.8.3"
raw-window-handle = "0.6"
