[package]
name = "blackbird"
version = "0.1.0"
edition = "2024"

[features]
default = ["tray-icon", "audio", "media-controls"]
tray-icon = ["dep:tray-icon"]
audio = ["blackbird-core/audio"]
media-controls = ["dep:souvlaki"]

[dependencies]
blackbird-core = { path = "../blackbird-core", default-features = false }
blackbird-shared = { path = "../blackbird-shared" }

anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
serde = { workspace = true }
toml = { workspace = true }

egui = "0.32.0"
eframe = "0.32.0"
egui_extras = { version = "0.32.0", features = ["image"] }
image = { version = "0.25", default-features = false, features = [
    "jpeg",
    "png",
    "webp",
    "gif",
] }
egui-phosphor = { version = "0.10.0", features = ["regular", "fill"] }
souvlaki = { version = "0.8.3", optional = true }
raw-window-handle = "0.6"
tray-icon = { version = "0.21.2", optional = true }
global-hotkey = "0.6"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_UI_Shell",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_System_Com",
    "Win32_Foundation",
] }
