[package]
name = "blackbird"
version = "0.1.0"
edition = "2024"

[features]
default = ["tray-icon", "audio", "media-controls"]
tray-icon = ["blackbird-client-shared/tray-icon"]
audio = ["blackbird-core/audio"]
media-controls = ["blackbird-client-shared/media-controls"]

[dependencies]
blackbird-client-shared = { path = "../blackbird-client-shared" }
blackbird-core = { path = "../blackbird-core", default-features = false }
blackbird-shared = { path = "../blackbird-shared" }

anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
serde = { workspace = true }
toml = { workspace = true }

egui = { workspace = true }
eframe = { workspace = true }
egui_extras = { workspace = true }
image = { workspace = true }
egui-phosphor = { workspace = true }
raw-window-handle = { workspace = true }
global-hotkey = { workspace = true }
